@@ -1,3 +1,7 @@
+2005/02/05 Morgan Christiansson <drftpd@mog.se>
+* Made UserManagerConverter convert lastReset so that users aren't
+  reset when imported.
+
 2005/02/03 Morgan Christiansson <drftpd@mog.se>
 * Moved slaveselection to it's own source folder for use with the
   DelegatingSlaveSelectionManager.
